# docs/swagger.yaml
@@ -1,7 +1,16 @@
-host: localhost:8000
 basePath: /api/users/v1
 definitions:
-  models.JSONResult:
+  echo.JSONLogin:
+    properties:
+      login:
+        type: string
+      password:
+        type: string
+    required:
+    - login
+    - password
+    type: object
+  echo.JSONResult:
     properties:
       message:
         type: string
@@ -19,32 +28,57 @@ definitions:
       password:
         type: string
       rule:
+        minimum: 0
         type: integer
     required:
-      - dob
-      - last_name
-      - login
-      - name
-      - password
-      - rule
+    - dob
+    - last_name
+    - login
+    - name
+    - password
     type: object
+host: localhost:8000
 info:
   contact: {}
   description: Api server
   title: Simple API
-  version: 1.0.0
+  version: 0.0.1
 paths:
   /:
-    post:
+    get:
       parameters:
-        - description: New user
-          in: body
-          name: message
-          required: true
+      - description: Authorization token
+        in: path
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
           schema:
             $ref: '#/definitions/models.User'
+        "500":
+          description: Internal Server Error
+      summary: Retrieves users
+      tags:
+      - read
+    post:
+      parameters:
+      - description: Authorization token
+        in: path
+        name: token
+        required: true
+        type: string
+      - description: New user
+        in: body
+        name: message
+        required: true
+        schema:
+          $ref: '#/definitions/models.User'
       produces:
-        - application/json
+      - application/json
       responses:
         "201":
           description: Created
@@ -54,74 +88,80 @@ paths:
           description: Validation error
           schema:
             allOf:
-              - $ref: '#/definitions/models.JSONResult'
-              - properties:
-                  message:
-                    type: string
-                type: object
+            - $ref: '#/definitions/echo.JSONResult'
+            - properties:
+                message:
+                  type: string
+              type: object
         "409":
           description: User with this login exists
           schema:
             allOf:
-              - $ref: '#/definitions/models.JSONResult'
-              - properties:
-                  message:
-                    type: string
-                type: object
+            - $ref: '#/definitions/echo.JSONResult'
+            - properties:
+                message:
+                  type: string
+              type: object
         "500":
           description: Internal Server Error
       summary: Create new user
       tags:
-        - admins
-    get:
+      - admins
+  /{login}:
+    delete:
+      parameters:
+      - description: Authorization token
+        in: path
+        name: token
+        required: true
+        type: string
+      - description: User login
+        in: path
+        name: login
+        required: true
+        type: string
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
+        "400":
+          description: Attempt to remove the last admin
           schema:
-            $ref: '#/definitions/models.User'
+            allOf:
+            - $ref: '#/definitions/echo.JSONResult'
+            - properties:
+                message:
+                  type: string
+              type: object
         "404":
           description: Not found
           schema:
             allOf:
-              - $ref: '#/definitions/models.JSONResult'
-              - properties:
-                  message:
-                    type: string
-                type: object
-        "500":
-          description: Internal Server Error
-      summary: Retrieves all users
-      tags:
-        - read
-  /{login}:
-    delete:
-      parameters:
-        - description: User login
-          in: path
-          name: login
-          required: true
-          type: string
-      produces:
-        - application/json
-      responses:
-        "200":
-          description: OK
+            - $ref: '#/definitions/echo.JSONResult'
+            - properties:
+                message:
+                  type: string
+              type: object
         "500":
           description: Internal Server Error
       summary: Delete user on given Login
       tags:
-        - admins
+      - admins
     get:
       parameters:
-        - description: User login
-          in: path
-          name: login
-          required: true
-          type: string
+      - description: Authorization token
+        in: path
+        name: token
+        required: true
+        type: string
+      - description: User login
+        in: path
+        name: login
+        required: true
+        type: string
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -131,31 +171,36 @@ paths:
           description: Not found
           schema:
             allOf:
-              - $ref: '#/definitions/models.JSONResult'
-              - properties:
-                  message:
-                    type: string
-                type: object
+            - $ref: '#/definitions/echo.JSONResult'
+            - properties:
+                message:
+                  type: string
+              type: object
         "500":
           description: Internal Server Error
       summary: Retrieves user based on given Login
       tags:
-        - read
+      - read
     put:
       parameters:
-        - description: User login
-          in: path
-          name: login
-          required: true
-          type: string
-        - description: Update user
-          in: body
-          name: message
-          required: true
-          schema:
-            $ref: '#/definitions/models.User'
+      - description: Authorization token
+        in: path
+        name: token
+        required: true
+        type: string
+      - description: User login
+        in: path
+        name: login
+        required: true
+        type: string
+      - description: Update user
+        in: body
+        name: message
+        required: true
+        schema:
+          $ref: '#/definitions/models.User'
       produces:
-        - application/json
+      - application/json
       responses:
         "202":
           description: Accepted
@@ -165,34 +210,35 @@ paths:
           description: Validation error
           schema:
             allOf:
-              - $ref: '#/definitions/models.JSONResult'
-              - properties:
-                  message:
-                    type: string
-                type: object
+            - $ref: '#/definitions/echo.JSONResult'
+            - properties:
+                message:
+                  type: string
+              type: object
         "404":
           description: Not found
           schema:
             allOf:
-              - $ref: '#/definitions/models.JSONResult'
-              - properties:
-                  message:
-                    type: string
-                type: object
+            - $ref: '#/definitions/echo.JSONResult'
+            - properties:
+                message:
+                  type: string
+              type: object
         "500":
           description: Internal Server Error
       summary: Update user on given Login
       tags:
-        - admins
+      - admins
+schemes:
+- http
 securityDefinitions:
   BasicAuth:
     type: basic
 swagger: "2.0"
 tags:
-  - description: Admin access
-    name: admins
-  - description: Read only access. For all but blocked
-    name: read
-
-schemes:
-  - http
+- description: Admin access
+  name: admins
+- description: Read only access. For all authorized but not blocked
+  name: read
+- description: For authorization
+  name: auth
